2016-07-04 Roman
- !!!:DB.{*,FireBird,MySQL,PostgreSQL,SQLite}:
    Preloading scanning mode is added to functions fieldSeek() and dataSeek() for significant performance rise here.
- Archive.DBArch: Messages get switched to use the preloading scanning mode.
- Special.SystemTests: To the DB tests pool added a test of the preloading scanning mode.
- FIX:UI.Vision: Pages including into the pages container is fixed for adjust at it's scale change.


2016-07-01 Roman
- Archive: First start replay of the local archive for redundancy active messages is added, into depth "rdRestDtOverTm".
- SYS: A prefix with the station name is added to most significant system's messages.
- FIX:UI.VCAEngine: Visualiser specific attributes force to modify at it's activation.
- UI.Vision: Lock for main window run mode change at the session update-reconnect.


2016-06-29 Roman
- Archive: messPut() expanded for alarms set and processing in first order and allow ignore new but equal ones in redundancy.
- DAQ.{BFN,DAQGate,MMS,ModBus,OPC_UA,Siemens}: Name of parameter of alarm messages expanded by the module name.
- FIX:DAQ.DAQGate: No removing archives at the parameter removing is fixed for first-level parameters.
- DAQ.LogicLev: The system IO "f_err" allowed for redundancy.
- DAQ.OPC_UA.libOPC_UA: Noncrashed NaN publish interval processing added.
- DAQ.SNMP: Local "dataRes" removed.
- Protocol.SelfSystem: Local "sesRes" removed.
- !!:UI.VCAEngine: Session local dataMtx() is replaced by generic dataRes() of node.
    Connections management by it's connection ID is added, mostly for detect remoted VCAServer change and re-iniate needs then.
- !!:UI.Vision: Help's field "Developers" is removed by merging it to the field "Author".
    Using of connection ID is added.
    Force to widgets update and restoring openned pages at a reconnection is added.


2016-06-23 Roman
- !!!:Archive,*: To messages get functions added a time result of the finished processing.